Added input to swagger.
